--- a/public/css/home/index.css
+++ b/public/css/home/index.css
@@ -161,10 +161,10 @@ h1 {
     #5f5f5f 200%
   );
   background-size: 200% 200%;
-				-webkit-background-clip: text;
-				background-clip: text;
-				color: transparent;
-        animation: 2s author ease infinite 30s;
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  animation: 2s author ease infinite 30s;
 }
 @keyframes author {
   0% {
@@ -182,6 +182,23 @@ h1 {
   font-size: 16px;
   line-height: 1.6;
   margin: 0 0 20px;
+}
+
+.text-1 {
+  padding-right: 615px;
   padding-left: 50px;
+}
+.figure-photo-1 {
+  position: absolute;
+  right: 175px;
+  top: 135px;
+}
+.text-2 {
+  padding-left: 615px;
   padding-right: 50px;
+}
+.figure-photo-2 {
+  position: absolute;
+  left: 175px;
+  top: 515px;
 }
