--- a/public/css/home/index.css
+++ b/public/css/home/index.css
@@ -115,6 +115,7 @@ html {
   background: #e0e0e0;
   padding: 30px 20px;
   width: 300px;
+  height: auto;
   border-radius: 10px;
   font-weight: bold;
 }
@@ -188,7 +189,7 @@ h1 {
   padding-right: 615px;
   padding-left: 50px;
 }
-.figure-photo-1 {
+.figure-container-1 {
   position: absolute;
   right: 175px;
   top: 135px;
@@ -197,8 +198,40 @@ h1 {
   padding-left: 615px;
   padding-right: 50px;
 }
-.figure-photo-2 {
+.figure-container-2 {
   position: absolute;
   left: 175px;
   top: 515px;
+}
+.project-container-1 {
+  width: 260px;
+  height: max-content;
+}
+.title-text-project {
+  color: rgba(255, 255, 255, 0);
+  transform: translateY(-104px);
+  height: 100px;
+  width: 250px;
+  margin-left: 5px;
+  padding-top: 15px;
+  position: absolute;
+}
+.title-text-project:hover {
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 0),
+    rgba(0, 0, 0, 0.5),
+    rgba(0, 0, 0, 1)
+  );
+  color: rgba(255, 255, 255, 1);
+  transform: translateY(-104px);
+  height: 100px;
+  width: 250px;
+  margin-left: 5px;
+  padding-top: 15px;
+  position: absolute;
+}
+.title-text-project:hover,
+.title-project:hover {
+  animation: 1s fadeup ease forwards;
 }
